* Fixed: Patched a complex issue that prevented multiple variations from loading when used from individual shortcodes * Fixed: More jQuery UI z-index fixes
git-svn-id: https://plugins.svn.wordpress.org/wpstorecart/trunk@781173 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpstorecart/admin/css/custom-theme/jquery-ui-1.10.1.custom.css
+++ b/wpstorecart/admin/css/custom-theme/jquery-ui-1.10.1.custom.css
@@ -471,6 +471,7 @@ button.ui-button::-moz-focus-inner {
 	left: 0;
 	padding: .2em;
 	outline: 0;
+        z-index:99999;
 }
 .ui-dialog .ui-dialog-titlebar {
 	padding: .4em 1em;
